# option-tui

./: .gitignore  Cargo.toml  README.md  app.py  pyproject.toml  styles.tcss  testing.ipynb
src/: main.rs  yahoo_api.rs
widgets/: cross_sectional_plots.py  option_table.py
