[package]
name = "option-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui        = { version = "0.26", features = ["crossterm"] }
crossterm      = "0.27"
tokio          = { version = "1", features = ["full"] }   # async fetch & timers
tokio-tungstenite = "0.21"                                # live WebSocket option chain
serde          = { version = "1", features = ["derive"] } # parse JSON
anyhow         = "1"                                      # ergonomic error handling
yahoo_finance_api = "4.0.0"
tokio-test = "0.4.4"
time = "0.3.41"
reqwest = "0.12.15"
regex = "1.11.1"
